feat: Add PaginatedResponse class and use List<Category> as recommendedCategories field in EventType